# spacecraft_dynamics

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
examples/: MissionSimulation.py  PointingSimulations.py  ac-med-multi-rw-simulation.py  ac-med-multi-vscmg-simulation-controlled.py  ac-med-multi-vscmg-simulation-null-motion-controlled.py  ac-med-multi-vscmg-simulation.py  ac-med-single-vscmg-simulation.py  ac-med-test-simulation.py  formation-flying-cw-dynamics-analysis.py  formation-flying-cw-dynamics.py  formation-flying-frame-conversions.py  formation-flying.py  mission-simulation.py  multi-rw-simulation.py  multi-vscmg-simulation-controlled.py  multi-vscmg-simulation-null-motion-controlled.py  multi-vscmg-simulation.py  pointing-simulations.py  simple-reference-tracking-simulation.py  single-vscmg-simulation.py  test-J2-differential-arg-periapsis-drift.py  test-J2-impact-mean-oe-differentials.py  test-J2-mean-ascending-node-rate.py  test-barycenter-compare.py  test-bounded-relative-motion.py  test-curvilinear-mapping.py  test-differential-arg-periapsis-drift-correction.py  test-linearized-mean-anomaly-difference.py  test-orbit-element-difference-solution.py  test-orbit-element-to-cartesian-state-mapping.py
src/spacecraft_dynamics/: __init__.py
src/spacecraft_dynamics/actuators/: __init__.py  reaction_wheel.py  vscmg.py  wheel_base.py
src/spacecraft_dynamics/analysis/: __init__.py  plots.py
src/spacecraft_dynamics/control/: __init__.py  attitude_error.py  pd_control.py
src/spacecraft_dynamics/core/: __init__.py  equations_of_motion.py  rotational_motion_integration.py  spacecraft.py
src/spacecraft_dynamics/guidance/: __init__.py  calculate_dcm_hn.py  pointing_guidance.py  reference_attitudes.py
src/spacecraft_dynamics/orbit/: __init__.py  equations_of_motion.py  inertial_position_velocity.py  orbit.py
src/spacecraft_dynamics/state/: __init__.py  base.py
(+8 files in other folders)
